--- a/.github/workflows/make-build.yml
+++ b/.github/workflows/make-build.yml
@@ -11,10 +11,11 @@ jobs:
       - uses: actions/checkout@main
         with:
           fetch-depth: 1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: log in to the container registry
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: build and push
         run: make push-cron
